# chatay-app

./: .gitignore  README.md
architecture-model/: chatay_blockchain.dsl
hotstuff/: README.md
substrate-node-template/: Cargo.toml  deploy_nodes.sh
substrate-node-template/contracts/digital_evidence_management/: Cargo.toml  lib.rs
substrate-node-template/pallets/public_incident_management/: Cargo.toml
substrate-node-template/pallets/public_incident_management/src/: lib.rs
substrate-node-template/runtime/: Cargo.toml
substrate-node-template/runtime/src/: lib.rs
